--- a/20245160_Guia2/css/biografia.css
+++ b/20245160_Guia2/css/biografia.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
 
 
 * {
@@ -37,6 +38,10 @@ header h1 {
   font-style: normal;
 }
 
+.inicio{
+  background-image: url(https://i.pinimg.com/originals/04/2a/ef/042aefaccd947a8c07f36b11f228ba2e.gif);
+}
+
 header h2 {
   font-size: 1.2rem;
   text-align: center;
@@ -64,6 +69,7 @@ nav span a {
   font-size: 0.9rem;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  font-weight: bold;
 }
 
 
@@ -124,4 +130,16 @@ footer {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+article h3{
+  font-family: "Jaro", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+article h3::first-letter{
+  font-size: 1.5rem;
+  text-transform: capitalize;
 }
